feat: improve error messages
